--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "clsx": "^2.1.1",
     "firebase": "^12.6.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-router-dom": "^7.10.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^20.19.25",
+    "@types/react": "^19.2.7",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
